[metadata]
name = ust_alma
author = Mustafa ali Kağan Küçük
version =  0.0.1
author_email = mustafa.ali.kagan@gmail.com
description = My Own PIP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/malikagan48/Pip
project_urls =
    Bug Tracker = https://github.com/malikagan48/Pip
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=['scikit-learn'],

[options.packages.find]
where = src